--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   <body>
 
-    <div class="contenedor">
+    <div class="container">
       <nav class="navbar-brand">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-6">
@@ -28,7 +28,7 @@
     </div>
 
     
-    <div class="contenedor">
+    <div class="container">
       
       <div class="collapse boton-item" id="contenedor">
         <hr><div class="col-sm-12"><a href="#Arepa"><p><b>Arepa e' huevo</b></p></a></div>
